@@ -7714,6 +7714,37 @@ if ($dom->{'reseller'} && defined(&update_reseller_unix_groups)) {
 		}
 	}
 
+# Attempt to request a let's encrypt cert
+$dom->{'auto_letsencrypt'} ||= $config{'auto_letsencrypt'};
+if ($dom->{'auto_letsencrypt'} && &domain_has_ssl($dom)) {
+	&$first_print(&text('letsencrypt_doing2',
+			    join(", ", map { "<tt>$_</tt>" } @dnames)));
+	&foreign_require("webmin");
+	my @dnames = &get_hostnames_for_ssl($dom);
+	my $phd = &public_html_dir($dom);
+	my ($ok, $cert, $key, $chain) = &webmin::request_letsencrypt_cert(
+					    \@dnames, $phd, $dom->{'emailto'});
+	if (!$ok) {
+		&$second_print(&text('letsencrypt_failed', $cert));
+		}
+	else {
+		&obtain_lock_ssl($dom);
+		&install_letsencrypt_cert($dom, $cert, $key, $chain);
+
+		$dom->{'letsencrypt_dname'} = '';
+		$dom->{'letsencrypt_last'} = time();
+		&save_domain($dom);
+
+		if ($dom->{'virt'}) {
+			&sync_dovecot_ssl_cert($dom, 1);
+			&sync_postfix_ssl_cert($dom, 1);
+			}
+		&break_invalid_ssl_linkages($dom);
+		&release_lock_ssl($dom);
+		&$second_print($text{'letsencrypt_done'});
+		}
+	}
+
 # Run the after creation command
 if (!$nopost) {
 	&run_post_actions();
